kube/deploy/core/ingress/external-proxy-x/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app external-proxy-x
  namespace: ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: haproxy
      app.kubernetes.io/instance: *app
  ingress:
    - fromCIDRSet:
        - cidr: "${IP_EC2_NON_K8S}/32"
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "80"
              protocol: UDP
            - port: "443"
              protocol: TCP
            - port: "443"
              protocol: UDP
